录屏没有 外设也可以录屏 录屏按钮失败 不变化 ICO设计 托盘  退出  双击打开

--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -9,6 +9,7 @@
 		ResizeMode="CanMinimize"
         Loaded="MainWindow_Loaded"
         Closing="MainWindow_Closing"
+        StateChanged="MainWindow_StateChanged"
 		Title="MainWindow" Height="700" Width="480" >
     <Grid>
         <materialDesign:Card Grid.Row="1">
