标题修正 引用litedb 创建数据库 实体类创建

--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -10,7 +10,7 @@
         Loaded="MainWindow_Loaded"
         Closing="MainWindow_Closing"
         StateChanged="MainWindow_StateChanged"
-		Title="MainWindow" Height="700" Width="480" >
+		Title="HWorkTools" Height="700" Width="480" >
     <Grid>
         <materialDesign:Card Grid.Row="1">
             <TabControl SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left">
