用用中和弹出框部分 上传

--- a/H_WorkTools/App.xaml
+++ b/H_WorkTools/App.xaml
@@ -12,6 +12,8 @@
                 <materialDesign:BundledTheme BaseTheme="light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.PopupBox.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
                 <ResourceDictionary Source="Resources/Language/zh_cn.xaml"/>
                 <ResourceDictionary Source="Resources/Language/jp_jp.xaml"/>
                 <ResourceDictionary Source="Resources/Language/en_us.xaml"/>
