--- a/H_WorkTools/Dailog/ExeView.xaml
+++ b/H_WorkTools/Dailog/ExeView.xaml
@@ -19,10 +19,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <md:ColorZone Mode="PrimaryMid"  Grid.Row="0" Grid.ColumnSpan="2">
-            <TextBlock d:Text="title" Text="{Binding Title}" Padding="5" FontSize="14" Margin="5,0"/>
+            <TextBlock Text="{Binding Title}" Padding="5" FontSize="14" Margin="5,0"/>
         </md:ColorZone>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" Grid.ColumnSpan="2">
-            <TextBox Text="{Binding InputString}" Margin="15,5" />
+            <TextBox Text="{Binding TxtTitle}" Margin="15,5" md:HintAssist.Hint="Title"/>
         </StackPanel>
         <StackPanel Grid.Row="2" VerticalAlignment="Center" Grid.ColumnSpan="2" >
             <Grid>
@@ -41,7 +41,7 @@
             <Button Content="Cancel" Margin="0,0,10,0" Width="80"
                     Command="{Binding CancelCommand}"
                     Style="{StaticResource MaterialDesignOutlinedButton}" Cursor="Hand"/>
-            <Button Content="OK"   Width="80"  Command="{Binding SureCommand}" Click="BtnOk_Click"/>
+            <Button Content="OK"   Width="80"  Command="{Binding SureCommand}"/>
         </StackPanel>
     </Grid>
 </UserControl>
