--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -10,13 +10,40 @@
         Loaded="MainWindow_Loaded"
         Closing="MainWindow_Closing"
         StateChanged="MainWindow_StateChanged"
-		Title="HWorkTools" Height="700" Width="480" >
+		Title="HWorkTools" Height="750" Width="480" >
     <md:DialogHost Identifier="Root">
         <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="36"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <md:ColorZone Mode="PrimaryMid"  Grid.Row="0"  Height="36">
+                <StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="40"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <Image Source="/Resources/hworktools.ico" Grid.Row="0" Grid.Column="0" Height="24" Width="24" HorizontalAlignment="Left" Margin="12,5,5,5"/>
+                        <TextBlock x:Name="txtTitle" Text="123" Padding="5" FontSize="14" Grid.Row="0" Grid.Column="1"/>
+                        <md:PackIcon Grid.Row="0" Grid.Column="3" Width="24" Height="24" Kind="Apps" HorizontalAlignment="Right" Margin="12,5,5,5" MouseDown=""/>
+                        <md:PackIcon Grid.Row="0" Grid.Column="4" Width="24" Height="24" Kind="Apps" HorizontalAlignment="Right" Margin="12,5,5,5" MouseDown=""/>
+                    </Grid>
+                </StackPanel>
+                
+            </md:ColorZone>
             <md:Card Grid.Row="1">
-                <TabControl SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left">
+                <TabControl SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left" >
                     <md:NavigationRailAssist.FloatingContent>
-                        <ToggleButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" x:Name="BtnTopMost" Click="BtnTopMost_Click" Height="24" Width="24" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="置顶" Content="{md:PackIcon Kind=Pin}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=PinOff,Size=20}" Cursor="Hand" />
+                        <ToggleButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" x:Name="BtnTopMost" Click="BtnTopMost_Click"  Margin="0,10,0,0"
+                                      Height="24" Width="24" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="置顶" 
+                                      Content="{md:PackIcon Kind=Pin}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=PinOff,Size=20}" Cursor="Hand" />
                     </md:NavigationRailAssist.FloatingContent>
                     <!--应用-开始-->
                     <TabItem Width="48" Height="48">
@@ -25,7 +52,7 @@
                                 <md:PackIcon Width="24" Height="24" HorizontalAlignment="Center" Kind="Apps" />
                             </StackPanel>
                         </TabItem.Header>
-                        <StackPanel Margin="12">
+                        <StackPanel Margin="12" >
                             <TextBlock Margin="0,0,0,8" Style="{StaticResource MaterialDesignHeadline5TextBlock}" Text="应用中心" />
                             <Grid Margin="0,0,0,10">
                                 <Grid.ColumnDefinitions>
@@ -39,12 +66,28 @@
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"/>
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"/>
                                 </Grid.RowDefinitions>
-                                <ToggleButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" Command="{Binding UpdateCommand}" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="监听" Content="{md:PackIcon Kind=Plus}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Plus}" Cursor="Hand" />
-                                <ToggleButton Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" x:Name="BtnExeDelete" Click="BtnExeDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteEmptyOutline}" Cursor="Hand" />
-                                <ToggleButton Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="1" x:Name="BtnExeRefresh" Click="BtnExeRefresh_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=Refresh}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Refresh}" Cursor="Hand" />
-                                <ToggleButton Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="1" x:Name="BtnExeSave" Click="BtnExeSave_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=ContentSave}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=ContentSave}" Cursor="Hand" />
-                                <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvExe" Height="570" Margin="0,10,0,0" AllowDrop="True"
-                                      PreviewMouseMove="LvExe_OnPreviewMouseMove" Drop="LvExe_OnDrop" MouseDoubleClick="LvExe_MouseDoubleClick">
+                                <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="txtApp" Text="" MaxLength="30" TextChanged="txtApp_TextChanged"/>
+                                <ToggleButton Grid.Row="0" Grid.Column="3" Command="{Binding UpdateCommand}" CommandParameter="{Binding ElementName=cbIp, Path=Text}" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="监听" Content="{md:PackIcon Kind=Plus}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Plus}" Cursor="Hand" />
+                                <ToggleButton Grid.Row="0" Grid.Column="5" x:Name="BtnExeDelete" Click="BtnExeDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteEmptyOutline}" Cursor="Hand" />
+                                <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvExe" Height="570" Margin="0,10,0,0" AllowDrop="True" 
+                                          PreviewMouseMove="LvExe_OnPreviewMouseMove" Drop="LvExe_OnDrop"
+                                          Background ="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                                          ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True">
+                                    <ListBox.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <WrapPanel/>
+                                        </ItemsPanelTemplate>
+                                    </ListBox.ItemsPanel>
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid Margin="10" Width="36" Height="36">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto" ></RowDefinition>
+                                                </Grid.RowDefinitions>
+                                                <Image ToolTip="{Binding title}" Source="{Binding ico}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="36" Height="36" MouseDown="Image_OnMouseDown"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
                                 </ListView>
                             </Grid>
                         </StackPanel>
