--- a/H_WorkTools/MainWindow.xaml
+++ b/H_WorkTools/MainWindow.xaml
@@ -10,7 +10,7 @@
         Loaded="MainWindow_Loaded"
         Closing="MainWindow_Closing"
         StateChanged="MainWindow_StateChanged"
-		Title="HWorkTools" Height="750" Width="480" >
+		Title="HWorkTools" Height="710" Width="480" >
     <md:DialogHost Identifier="Root">
         <Grid>
             <Grid.RowDefinitions>
@@ -23,28 +23,25 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="50"/>
                             <ColumnDefinition/>
-                            <ColumnDefinition/>
                             <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="40"/>
+                            <ColumnDefinition Width="55"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Image Source="/Resources/hworktools.ico" Grid.Row="0" Grid.Column="0" Height="24" Width="24" HorizontalAlignment="Left" Margin="12,5,5,5"/>
-                        <TextBlock x:Name="txtTitle" Text="123" Padding="5" FontSize="14" Grid.Row="0" Grid.Column="1"/>
-                        <md:PackIcon Grid.Row="0" Grid.Column="3" Width="24" Height="24" Kind="Apps" HorizontalAlignment="Right" Margin="12,5,5,5" MouseDown=""/>
-                        <md:PackIcon Grid.Row="0" Grid.Column="4" Width="24" Height="24" Kind="Apps" HorizontalAlignment="Right" Margin="12,5,5,5" MouseDown=""/>
+                        <TextBlock x:Name="txtTitle" Text="123" Padding="5" FontSize="14" Grid.Row="0" Grid.Column="1" Margin="0,5,0,0"/>
+                        <ToggleButton Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="1" x:Name="BtnTopMost" Click="BtnTopMost_Click"  Margin="0,0,0,0"
+                                      Height="30" Width="30" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="置顶" HorizontalAlignment="Right"
+                                      Content="{md:PackIcon Kind=Pin}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=PinOff,Size=20}" Cursor="Hand" />
+                        <md:PackIcon Grid.Row="0" Grid.Column="3" Width="24" Height="24" Kind="WindowMinimize" HorizontalAlignment="Right" Margin="12,5,5,5" MouseDown="Minimize_OnMouseDown"/>
+                        <md:PackIcon Grid.Row="0" Grid.Column="4" Width="24" Height="24" Kind="WindowClose" HorizontalAlignment="Right" Margin="12,5,17,5" MouseDown="Close_OnMouseDown"/>
                     </Grid>
                 </StackPanel>
-                
             </md:ColorZone>
             <md:Card Grid.Row="1">
                 <TabControl SnapsToDevicePixels="True" Style="{StaticResource MaterialDesignNavigationRailTabControl}" TabStripPlacement="Left" >
-                    <md:NavigationRailAssist.FloatingContent>
-                        <ToggleButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" x:Name="BtnTopMost" Click="BtnTopMost_Click"  Margin="0,10,0,0"
-                                      Height="24" Width="24" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="置顶" 
-                                      Content="{md:PackIcon Kind=Pin}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=PinOff,Size=20}" Cursor="Hand" />
-                    </md:NavigationRailAssist.FloatingContent>
                     <!--应用-开始-->
                     <TabItem Width="48" Height="48">
                         <TabItem.Header>
@@ -68,8 +65,8 @@
                                 </Grid.RowDefinitions>
                                 <TextBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" x:Name="txtApp" Text="" MaxLength="30" TextChanged="txtApp_TextChanged"/>
                                 <ToggleButton Grid.Row="0" Grid.Column="3" Command="{Binding UpdateCommand}" CommandParameter="{Binding ElementName=cbIp, Path=Text}" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="监听" Content="{md:PackIcon Kind=Plus}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=Plus}" Cursor="Hand" />
-                                <ToggleButton Grid.Row="0" Grid.Column="5" x:Name="BtnExeDelete" Click="BtnExeDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteEmptyOutline}" Cursor="Hand" />
-                                <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvExe" Height="570" Margin="0,10,0,0" AllowDrop="True" 
+                                <ToggleButton Grid.Row="0" Grid.Column="5" x:Name="BtnExeDelete" Click="BtnExeDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteOffOutline}" Cursor="Hand" />
+                                <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvExe" Height="540" Margin="0,10,0,0" AllowDrop="True" 
                                           PreviewMouseMove="LvExe_OnPreviewMouseMove" Drop="LvExe_OnDrop"
                                           Background ="Transparent" ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
                                           ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True">
@@ -111,7 +108,7 @@
                                                 <ColumnDefinition Width="60"/>
                                                 <ColumnDefinition Width="60"/>
                                                 <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
+                                                <ColumnDefinition />
                                             </Grid.ColumnDefinitions>
                                             <Grid.RowDefinitions>
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
@@ -122,17 +119,17 @@
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                             </Grid.RowDefinitions>
                                             <!--停止共享-->
-                                            <Label Grid.Row="0" Grid.Column="0" Content="NiceName" Margin="0,10,0,0"/>
-                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtNiceName" md:HintAssist.Hint="Key" Text="" Margin="0,10,0,0"/>
-                                            <Label Grid.Row="1" Grid.Column="0" Content="本地IP" Margin="0,10,0,0"/>
-                                            <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbIp" DisplayMemberPath="title" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}"/>
-                                            <Label Grid.Row="2" Grid.Column="0" Content="密码"  Margin="0,10,0,0"/>
-                                            <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpKey" md:HintAssist.Hint="Key" MaxLength="4" Text=""/>
-                                            <Label Grid.Row="3" Grid.Column="0" Content="模式" Margin="0,10,0,0"/>
+                                            <Label Grid.Row="0" Grid.Column="0" Content="NiceName" Margin="10,10,0,0"/>
+                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtNiceName" md:HintAssist.Hint="Key" Text="" Margin="0,10,10,0"/>
+                                            <Label Grid.Row="1" Grid.Column="0" Content="本地IP" Margin="10,10,0,0"/>
+                                            <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="cbIp" DisplayMemberPath="title" SelectedValuePath="id" IsEnabled="{Binding Path=IsChecked, ElementName=FilledComboBoxEnabledCheckBox}" Margin="0,0,10,0"/>
+                                            <Label Grid.Row="2" Grid.Column="0" Content="密码"  Margin="10,10,0,0"/>
+                                            <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpKey" md:HintAssist.Hint="Key" MaxLength="4" Text="" Margin="0,0,10,0"/>
+                                            <Label Grid.Row="3" Grid.Column="0" Content="模式" Margin="10,10,0,0"/>
                                             <RadioButton Grid.Row="3" Grid.Column="1" x:Name="rbMode1" Content="共享" Style="{StaticResource MaterialDesignRadioButton}" IsChecked="True" Margin="0,10,0,0"/>
                                             <RadioButton Grid.Row="3" Grid.Column="3" x:Name="rbMode2" Content="控制" Style="{StaticResource MaterialDesignRadioButton}" Margin="0,10,0,0"/>
                                             <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="1" Width="80" Content="共享" x:Name="BtnDeskShare" Click="BtnDeskShare_Click" FontSize="14" Cursor="Hand" Margin="0,10,0,0"/>
-                                            <TextBlock  Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="0,10,0,0">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
+                                            <TextBlock  Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="10,10,10,10">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
                                         </Grid>
                                     </TabItem>
                                     <TabItem Header="加入或求助">
@@ -142,7 +139,7 @@
                                                 <ColumnDefinition Width="60"/>
                                                 <ColumnDefinition Width="60"/>
                                                 <ColumnDefinition Width="60"/>
-                                                <ColumnDefinition Width="60"/>
+                                                <ColumnDefinition/>
                                             </Grid.ColumnDefinitions>
                                             <Grid.RowDefinitions>
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
@@ -150,13 +147,13 @@
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                                 <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
                                             </Grid.RowDefinitions>
-                                            <Label Grid.Row="0" Grid.Column="0" Content="IP"  Margin="0,10,0,0"/>
-                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtIp" md:HintAssist.Hint="Key" Text="192.168.3.132" Margin="0,10,0,0"/>
-                                            <Label Grid.Row="1" Grid.Column="0" Content="密码"  Margin="0,10,0,0"/>
-                                            <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpPswKey" md:HintAssist.Hint="Key" MaxLength="4" Text=""/>
+                                            <Label Grid.Row="0" Grid.Column="0" Content="IP"  Margin="10,10,0,0"/>
+                                            <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtIp" md:HintAssist.Hint="Key" Text="192.168.3.132" Margin="0,10,10,0"/>
+                                            <Label Grid.Row="1" Grid.Column="0" Content="密码"  Margin="10,10,0,0"/>
+                                            <TextBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" x:Name="txtRdpPswKey" md:HintAssist.Hint="Key" MaxLength="4" Text="" Margin="0,0,10,0"/>
                                             <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="1" Width="80" Content="加入" x:Name="BtnDeskShareJoin" Click="BtnDeskShareJoin_Click" FontSize="14" Cursor="Hand" Margin="0,10,0,0"/>
                                             <Button Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Width="80" Content="求助" x:Name="BtnDeskShareInvite" Click="BtnDeskShareInvite_Click" FontSize="14" Cursor="Hand" Margin="0,10,0,0"/>
-                                            <TextBlock  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="0,10,0,0">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
+                                            <TextBlock  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="5" TextWrapping="Wrap" Margin="10,10,10,10">quiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaquiaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</TextBlock>
                                         </Grid>
                                     </TabItem>
                                 </TabControl>
@@ -182,7 +179,7 @@
                                     <ColumnDefinition Width="60"/>
                                     <ColumnDefinition Width="60"/>
                                     <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition/>
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"></RowDefinition>
@@ -234,7 +231,7 @@
                             <Grid >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition />
                                     <ColumnDefinition Width="60"/>
                                     <ColumnDefinition Width="60"/>
                                     <ColumnDefinition Width="60"/>
@@ -292,7 +289,7 @@
                                     <RowDefinition FrameworkElement.FlowDirection="RightToLeft"/>
                                 </Grid.RowDefinitions>
                                 <ToggleButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="1" x:Name="BtnClipboard" Click="BtnClipboard_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="监听" Content="{md:PackIcon Kind=ClipboardPlus}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=ClipboardOff}" Cursor="Hand" />
-                                <ToggleButton Grid.Row="0" Grid.Column="5" Grid.ColumnSpan="1" x:Name="BtnDelete" Click="BtnDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteOffOutline}" Cursor="Hand" />
+                                <ToggleButton Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1" x:Name="BtnDelete" Click="BtnDelete_Click" Height="40" Width="40" Style="{StaticResource MaterialDesignActionToggleButton}" ToolTip="删除" Content="{md:PackIcon Kind=DeleteEmptyOutline}" md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=DeleteOffOutline}" Cursor="Hand" />
                                 <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" x:Name="LvClipboard" Height="500" Margin="0,10,0,0"
                                       PreviewMouseMove="LvClipboard_OnPreviewMouseMove" Drop="LvClipboard_OnDrop" AllowDrop="True" MouseDoubleClick="LvClipboard_MouseDoubleClick">
                                 </ListView>
